--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,17 +13,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Java
+      - name: Install Java 11
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '11'
+          distribution: temurin
+          java-version: 11
 
-      - name: Download Garmin SDK
+      - name: Download SDK Manager
         run: |
-          wget https://developer.garmin.com/downloads/connect-iq/sdks/connectiq-sdk-lin-7.3.0.zip
-          unzip connectiq-sdk-lin-7.3.0.zip
-          echo "$PWD/connectiq-sdk-lin/bin" >> $GITHUB_PATH
+          wget https://developer.garmin.com/downloads/connect-iq/sdk-manager/sdkmanager-linux.zip
+          unzip sdkmanager-linux.zip
+          chmod +x sdkmanager/sdkmanager
+
+      - name: Install Connect IQ SDK
+        run: |
+          ./sdkmanager/sdkmanager install sdk
+
+      - name: Add SDK to PATH
+        run: |
+          echo "$HOME/.garmin/connectiq-sdk/bin" >> $GITHUB_PATH
 
       - name: Build Watch Face
         run: |
