--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,47 +1,132 @@
-name: Build Garmin IQ
+name: Build Connect IQ (Instinct 2X Solar)
 
 on:
   push:
-    branches: [ "main" ]
+    paths:
+      - 'source/**'
+      - 'manifest.xml'
+      - 'resources/**'
+      - 'developer_key.der'
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      OUTPUT_BASENAME: TehBerInstinct
+      SDK_MANAGER_URL: https://developer.garmin.com/downloads/connect-iq/sdk-manager/connectiq-sdk-manager-linux.zip
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Java 11
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 11
-
-      - name: Download SDK Manager
+      - name: Install dependencies
         run: |
-          wget https://developer.garmin.com/downloads/connect-iq/sdk-manager/sdkmanager-linux.zip
-          unzip sdkmanager-linux.zip
-          chmod +x sdkmanager/sdkmanager
+          sudo apt-get update
+          sudo apt-get install -y unzip curl openssl
 
-      - name: Install Connect IQ SDK
+      - name: Download ConnectIQ SDK Manager (from provided URL)
         run: |
-          ./sdkmanager/sdkmanager install sdk
+          echo "Downloading SDK Manager from $SDK_MANAGER_URL"
+          curl -fL "$SDK_MANAGER_URL" -o sdkmanager.zip
+          unzip -q sdkmanager.zip -d sdkmanager || true
+          ls -la sdkmanager || true
 
-      - name: Add SDK to PATH
+      - name: Try to locate SDK inside extracted SDK Manager or usual places
+        id: findsdk
         run: |
-          echo "$HOME/.garmin/connectiq-sdk/bin" >> $GITHUB_PATH
+          SDK_DIR=""
+          # 1) check extracted folder
+          SDK_DIR=$(find sdkmanager -type d -name 'connectiq-sdk*' -print -quit || true)
+          # 2) check common home locations (if installer previously installed)
+          if [ -z "$SDK_DIR" ]; then
+            SDK_DIR=$(find $HOME -type d -name 'connectiq-sdk*' -print -quit || true)
+          fi
+          if [ -z "$SDK_DIR" ]; then
+            SDK_DIR=$(find $HOME/.Garmin -type d -name 'connectiq-sdk*' -print -quit || true)
+          fi
+          # If still not found, fail with helpful message
+          if [ -z "$SDK_DIR" ]; then
+            echo "SDK directory not found after extracting the SDK Manager."
+            echo "If the SDK Manager requires interactive install, provide the SDK archive URL (connectiq-sdk-<version>-linux-x64.tar.gz) or place the SDK in the repo."
+            exit 1
+          fi
+          echo "SDK_DIR=$SDK_DIR" >> $GITHUB_ENV
+          ls -la "$SDK_DIR"
 
-      - name: Build Watch Face
+      - name: Prepare developer key
         run: |
-          monkeyc \
-            -o TehBerInstinct.iq \
-            -f monkey.jungle \
-            -y developer_key.der
+          if [ -n "${{ secrets.DEVELOPER_KEY }}" ]; then
+            echo "Decoding developer key from secret..."
+            echo "${{ secrets.DEVELOPER_KEY }}" | base64 --decode > developer_key.pem
+            chmod 600 developer_key.pem
+          elif [ -f developer_key.der ]; then
+            echo "Converting developer_key.der -> developer_key.pem"
+            if openssl rsa -inform DER -in developer_key.der -out developer_key.pem 2>/dev/null; then
+              echo "Converted with openssl rsa"
+            else
+              openssl pkcs8 -inform DER -in developer_key.der -nocrypt -out developer_key.pem
+              echo "Converted with openssl pkcs8"
+            fi
+            chmod 600 developer_key.pem
+          else
+            echo "No developer key found. Add developer_key.der to the repo (not recommended) or set DEVELOPER_KEY secret (base64 of PEM)."
+            exit 1
+          fi
 
-      - name: Upload IQ Artifact
+      - name: Ensure resources folder name
+        run: |
+          if [ -d recources ] && [ ! -d resources ]; then
+            mv recources resources || true
+          fi
+
+      - name: Find Instinct 2X Solar device XML
+        id: finddevice
+        run: |
+          DEVICE_XML=""
+          DEVICE_XML=$(find "$SDK_DIR" -type f -iname '*instinct*2*solar*.xml' -print -quit || true)
+          if [ -z "$DEVICE_XML" ]; then
+            DEVICE_XML=$(find "$SDK_DIR" -type f -iname '*instinct*2x*.xml' -print -quit || true)
+          fi
+          if [ -z "$DEVICE_XML" ]; then
+            DEVICE_XML=$(find "$SDK_DIR" -type f -iname '*instinct*2*.xml' -print -quit || true)
+          fi
+          if [ -z "$DEVICE_XML" ]; then
+            DEVICE_XML=$(find "$SDK_DIR" -type f -path '*/devices/*' -name '*.xml' -print -quit || true)
+          fi
+          if [ -z "$DEVICE_XML" ]; then
+            echo "No device xml found in SDK"
+            exit 1
+          fi
+          echo "DEVICE_XML=$DEVICE_XML" >> $GITHUB_ENV
+          echo "Using device: $DEVICE_XML"
+
+      - name: Build with monkeyc (Instinct 2X Solar)
+        run: |
+          SDK_BIN="$SDK_DIR/bin/monkeyc"
+          chmod +x "$SDK_BIN"
+          mkdir -p build
+          DEVICE_BASENAME=$(basename "$DEVICE_XML" .xml | tr '[:upper:]' '[:lower:]' | tr -c 'a-z0-9_-' '-')
+          OUTNAME="${OUTPUT_BASENAME}-${DEVICE_BASENAME}.iq"
+          echo "Output file: build/$OUTNAME"
+          "$SDK_BIN" \
+            -o "build/$OUTNAME" \
+            -m manifest.xml \
+            -y developer_key.pem \
+            -z "$SDK_DIR" \
+            -a "$DEVICE_XML" \
+            -f source/*.mc
+
+      - name: List build output
+        run: |
+          ls -la build || true
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: TehBerInstinct-IQ
-          path: TehBerInstinct.iq
+          name: connectiq-build
+          path: build/
+
+      - name: Security reminder
+        if: always()
+        run: |
+          echo "If developer key was committed to the repository, please remove it and rotate the key. Use repository secrets instead."
