--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       OUTPUT_BASENAME: TehBerInstinct
-      SDK_MANAGER_URL: https://developer.garmin.com/downloads/connect-iq/sdk-manager/connectiq-sdk-manager-linux.zip
-      SDK_DIR: TehBerInstinct/.Garmin  # مسیر مستقیم SDK
+      SDK_DIR: ${{ github.workspace }}/.Garmin  # مسیر دقیق SDK نسبت به workspace
 
     steps:
       - name: Checkout
@@ -25,13 +24,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y unzip curl openssl
-
-      - name: Download ConnectIQ SDK Manager (from provided URL)
-        run: |
-          echo "Downloading SDK Manager from $SDK_MANAGER_URL"
-          curl -fL "$SDK_MANAGER_URL" -o sdkmanager.zip
-          unzip -q sdkmanager.zip -d sdkmanager || true
-          ls -la sdkmanager || true
 
       - name: Verify SDK directory
         run: |
